# cameracquire

./: .gitignore  README.md  pyproject.toml
src/cameracquire/: __init__.py  api.py  core.py
src/cameracquire/render_backends/: __init__.py  terminal.py  web.py  web_template.html
src/cameracquire/render_backends/templates/: web_template.html
